RG-2346: Fixed. Editable heading incorrectly wraps phrases with no spaces [publish]

--- a/src/editable-heading/editable-heading.css
+++ b/src/editable-heading/editable-heading.css
@@ -77,8 +77,7 @@
   .multiline & {
     -webkit-line-clamp: 3;
 
-    word-wrap: break-word;
-    word-break: normal;
+    word-break: break-word;
   }
 }
 
